...
                android:layout_height="wrap_content"
                android:baselineAligned="true"
                android:gravity="bottom"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/widget_primary_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:textColor="@color/widget_accent"
...
